--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <hl id="TitleName">Gabriel Brandão</hl><!-- Texto na página-->
      
      <a id= "GitH" href="https://instagram.com/gabriel.brandao1">
-      <img src="/imagens/github_2.svg" alt="ícone github"> 
+      <img src="/Imagens/github_2.svg" alt="ícone github"> 
       <span id="Login">@RedDiacon </span>
      </a><!-- Hyperlink-->
      
